examples/bad/17-lambda-parameter.tx
fun main(): Void {
  printInt(test(lambda (a: Int) => return a + 1; }));

  return;
}

fun test(f: (Int) -> Int): Int {
  return f(42);
}
